--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <header>
         <nav>
             <ul class="ul__header">
-                <li class="li__header"><a href="#">Tiktok</a></li>
-                <li class="li__header"><a href="#">Instagram</a></li>
-                <li class="li__header"><a href="#">Twitter</a></li>
+                <li class="li__header"><a href="https://www.tiktok.com/@b4rdin">Tiktok</a></li>
+                <li class="li__header"><a href="https://www.instagram.com/pedro1oo/">Instagram</a></li>
+                <li class="li__header"><a href="https://twitter.com/Pedro_1oo">Twitter</a></li>
             </ul>
         </nav>
     </header>
